exports[`webpack Accepts a custom config 1`] = `
Object {
  "babel": Object {
    "babelrc": "/test/project/path",
  },
  "devtool": "source-map",
  "entry": Object {
    "index": "./index",
    "vendor": Array [],
  },
  "module": Object {
    "rules": Array [
      Object {
        "test": /\.json$/,
        "use": "json-loader",
      },
      Object {
        "include": Array [
          "/test/project/path/src",
        ],
        "test": /\.(jsx?|es6)$/,
        "use": "babel-loader",
      },
      Object {
        "exclude": "/test/project/path/src/styles",
        "include": "/test/project/path/src",
        "test": /(\.postcss|\.pcss|\.css)$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[path][name]_[local]__[hash:base64:5]",
              "modules": true,
              "sourceMaps": true,
            },
          },
          Object {
            "loader": "postcss-loader",
          },
        ],
      },
      Object {
        "include": Array [
          "/test/project/path/src/styles",
          "/test/project/path/node_modules",
        ],
        "test": /(\.postcss|\.pcss|\.css)$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "sourceMaps": true,
            },
          },
          Object {
            "loader": "postcss-loader",
          },
        ],
      },
      Object {
        "include": Array [
          "/test/project/path/src",
        ],
        "test": /\.(png|jpg|jpeg|gif|svg|txt)$/,
        "use": Object {
          "loader": "url-loader",
          "options": Object {
            "limit": 8192,
            "name": "[name]-[chunkhash].[ext]",
          },
        },
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name]-[hash].chunk.js",
    "filename": "[name]-[hash].js",
    "path": "/test/project/path/dist",
    "publicPath": "https://cdn.com/",
  },
  "plugins": Array [],
  "postcss": [Function],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".es6",
    ],
    "modules": Array [
      "/test/project/path/src",
      "/test/project/path/node_modules",
      "/test/neato/path/node_modules",
    ],
  },
}
`;

exports[`webpack Builds a dev webpack config 1`] = `
Object {
  "babel": Object {
    "babelrc": "/test/project/path",
  },
  "devtool": "source-map",
  "entry": Object {
    "index": "./index",
    "vendor": Array [],
  },
  "module": Object {
    "rules": Array [
      Object {
        "test": /\.json$/,
        "use": "json-loader",
      },
      Object {
        "include": Array [
          "/test/project/path/src",
        ],
        "test": /\.(jsx?|es6)$/,
        "use": "babel-loader",
      },
      Object {
        "exclude": "/test/project/path/src/styles",
        "include": "/test/project/path/src",
        "test": /(\.postcss|\.pcss|\.css)$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[path][name]_[local]__[hash:base64:5]",
              "modules": true,
              "sourceMaps": true,
            },
          },
          Object {
            "loader": "postcss-loader",
          },
        ],
      },
      Object {
        "include": Array [
          "/test/project/path/src/styles",
          "/test/project/path/node_modules",
        ],
        "test": /(\.postcss|\.pcss|\.css)$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "sourceMaps": true,
            },
          },
          Object {
            "loader": "postcss-loader",
          },
        ],
      },
      Object {
        "include": Array [
          "/test/project/path/src",
        ],
        "test": /\.(png|jpg|jpeg|gif|svg|txt)$/,
        "use": Object {
          "loader": "url-loader",
          "options": Object {
            "limit": 8192,
            "name": "[name]-[chunkhash].[ext]",
          },
        },
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name]-[hash].chunk.js",
    "filename": "[name]-[hash].js",
    "path": "/test/project/path/dist",
    "publicPath": "/",
  },
  "plugins": Array [],
  "postcss": [Function],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".es6",
    ],
    "modules": Array [
      "/test/project/path/src",
      "/test/project/path/node_modules",
      "/test/neato/path/node_modules",
    ],
  },
}
`;

exports[`webpack Creates a webpack config object 1`] = `
Object {
  "babel": Object {
    "babelrc": "/test/project/path",
  },
  "devtool": "source-map",
  "entry": Object {
    "index": "./index",
    "vendor": Array [],
  },
  "module": Object {
    "rules": Array [
      Object {
        "test": /\.json$/,
        "use": "json-loader",
      },
      Object {
        "include": Array [
          "/test/project/path/src",
        ],
        "test": /\.(jsx?|es6)$/,
        "use": "babel-loader",
      },
      Object {
        "exclude": "/test/project/path/src/styles",
        "include": "/test/project/path/src",
        "test": /(\.postcss|\.pcss|\.css)$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[path][name]_[local]__[hash:base64:5]",
              "modules": true,
              "sourceMaps": true,
            },
          },
          Object {
            "loader": "postcss-loader",
          },
        ],
      },
      Object {
        "include": Array [
          "/test/project/path/src/styles",
          "/test/project/path/node_modules",
        ],
        "test": /(\.postcss|\.pcss|\.css)$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "sourceMaps": true,
            },
          },
          Object {
            "loader": "postcss-loader",
          },
        ],
      },
      Object {
        "include": Array [
          "/test/project/path/src",
        ],
        "test": /\.(png|jpg|jpeg|gif|svg|txt)$/,
        "use": Object {
          "loader": "url-loader",
          "options": Object {
            "limit": 8192,
            "name": "[name]-[chunkhash].[ext]",
          },
        },
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name]-[hash].chunk.js",
    "filename": "[name]-[hash].js",
    "path": "/test/project/path/dist",
    "publicPath": "/",
  },
  "plugins": Array [],
  "postcss": [Function],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".es6",
    ],
    "modules": Array [
      "/test/project/path/src",
      "/test/project/path/node_modules",
      "/test/neato/path/node_modules",
    ],
  },
}
`;
